# cpp_forth

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  init.sh  launch.json
euler/: problem01  problem01.asm  problem01.porth  problem02.porth
examples/: hello-world.porth  io.porth  rule110.porth  test.forth  test_dup.porth  test_equals.porth  test_gt_lt.porth  test_if.forth  test_if_else.forth  test_if_else.porth  test_if_simple.porth  test_lex_trim.forth  test_while.porth
inc/: bar.h  bimap.hpp  bimap_impl.hpp  command.hpp  lexer.hpp  op.hpp  parser.hpp
src/: bar.cpp  lexer.cpp  main.cpp  op.cpp  parser.cpp
std/: std.porth
tests/: 00-stack.porth  01-arithmetics  01-arithmetics.asm  01-arithmetics.porth  02-conditions.porth  03-loops.porth  04-memory.porth  05-hello-world.porth  06-bitwise.porth
